--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h2>Hello, I’m Phumza</h2>
       <p class="tagline">A <strong>Systems Development Graduate</strong> passionate about solving problems with technology and creating inclusive digital solutions.</p>
       <blockquote style="font-size:1.2rem; font-style:italic; color:#a0b3d1; margin-top:1rem; line-height:1.6;">
-        "I enjoy understanding how systems work, documenting processes, and identifying solutions — improving every step of the way."
+        "I enjoy understanding how things work, documenting processes, and identifying solutions — improving every step of the way."
       </blockquote>
       <a href="about.html" class="cv-button">Learn More About Me</a>
     </div>
