--- a/about.html
+++ b/about.html
@@ -5,6 +5,79 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About Me | Phumza Sotyantya</title>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    /* Typing effect */
+    .typing {
+      border-right: 2px solid var(--primary-blue);
+      white-space: nowrap;
+      overflow: hidden;
+      width: 0;
+      animation: typing 3s steps(60, end) forwards, blink 0.7s step-end infinite;
+      display: inline-block;
+    }
+
+    @keyframes typing {
+      from { width: 0; }
+      to { width: 100%; }
+    }
+
+    @keyframes blink {
+      50% { border-color: transparent; }
+    }
+
+    .hero-text h2 {
+      color: var(--primary-blue);
+      font-size: 2.2rem;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+
+    .hero-text p.tagline {
+      font-size: 1.1rem;
+      color: var(--text-muted);
+      max-width: 700px;
+      margin: 0.5rem auto 1rem auto;
+      text-align: center;
+    }
+
+    blockquote {
+      font-style: italic;
+      color: var(--text-muted);
+      max-width: 700px;
+      margin: 1rem auto;
+      text-align: center;
+      line-height: 1.5;
+      font-size: 1rem;
+    }
+
+    .content-section .card {
+      max-width: 800px;
+      margin: 1rem auto;
+      padding: 1.5rem;
+      border-radius: 12px;
+      background: var(--card-bg);
+      box-shadow: 0 6px 12px var(--shadow);
+      text-align: center;
+    }
+
+    .what-i-do ul {
+      list-style: none;
+      max-width: 600px;
+      margin: 1rem auto;
+      padding-left: 0;
+      line-height: 1.6;
+    }
+
+    .what-i-do li {
+      margin-bottom: 0.8rem;
+    }
+
+    @media (max-width: 768px) {
+      .hero-text h2 { font-size: 2rem; }
+      .hero-text p.tagline { font-size: 1rem; }
+      .content-section .card { padding: 1rem; }
+    }
+  </style>
 </head>
 <body>
 
@@ -27,19 +100,17 @@
   <section class="hero fade-in">
     <div class="hero-text">
       <h2>About Me</h2>
-      <p class="tagline">
-        I’m a <strong>Systems Development Graduate</strong> committed to problem-solving, innovation, and making technology accessible and practical.
-      </p>
-      <blockquote style="font-size:1.1rem; font-style:italic; color:#a0b3d1; margin-top:1rem; line-height:1.5;">
+      <p class="tagline"><span class="typing">I’m a Systems Development Graduate committed to problem-solving, innovation, and making technology accessible and practical.</span></p>
+      <blockquote>
         "I work well in team-oriented environments, enjoy assisting others, and am committed to continuous learning and structured problem-solving."
       </blockquote>
     </div>
-    </section>
+  </section>
 
   <section class="content-section fade-in">
     <div class="card">
       <p>
-        With experience in <strong>IT support, peer advising, and ICT support </strong>, I enjoy analyzing systems, documenting processes, and contributing improvements through research and collaboration.
+        With experience in <strong>IT support, peer advising, and ICT support</strong>, I enjoy analyzing systems, documenting processes, and contributing improvements through research and collaboration.
       </p>
     </div>
   </section>
@@ -50,7 +121,7 @@
       <li>📍 Eastern Cape, South Africa</li>
       <li>🎓 Diploma in Systems Development – Boston City Campus (Modules: A+, Security+)</li>
       <li>💻 IT Support, Peer Advising, Systems Analysis</li>
-      <li>💡 Skills: C#, .NET, Visual Studio 2022, HTML</li>
+      <li>💡 Skills: C#, .NET, Visual Studio 2022, SSMS, HTML</li>
       <li>🌟 Cisco, Microsoft, Coursera Certified</li>
     </ul>
   </section>
@@ -63,6 +134,7 @@
 <footer>© 2025 Phumza Sotyantya</footer>
 
 <script>
+  // Hamburger toggle
   const navToggle = document.getElementById('nav-toggle');
   const navLinks = document.getElementById('nav-links');
   navToggle.addEventListener('click', () => {
