--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       color: var(--primary-blue);
       font-size: 2.5rem;
       margin-bottom: 1rem;
+      text-align: left;
     }
 
     .hero-text p.tagline {
@@ -41,50 +42,69 @@
       margin-bottom: 1.5rem;
     }
 
-    /* IMAGE PUZZLE */
+    .cv-button {
+      display: inline-block;
+      background-color: var(--primary-blue);
+      color: #fff;
+      padding: 0.85rem 2rem;
+      border-radius: 9999px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: all 0.3s ease;
+    }
+
+    .cv-button:hover {
+      background-color: var(--primary-blue-dark);
+      box-shadow: 0 8px 20px var(--hover-glow);
+      transform: translateY(-3px);
+    }
+
+    /* IMAGE PUZZLE GRID */
     .image-grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(3, 1fr);
-      max-width: 350px;
-      max-height: 350px;
       gap: 2px;
+      width: 300px;
+      height: 300px;
       border-radius: 12px;
       overflow: hidden;
     }
 
     .tile {
       background-image: url('assets/image_f275c45c.png');
-      background-size: 300%; /* makes each tile show a portion */
+      background-size: 300% 300%;
       background-repeat: no-repeat;
       width: 100%;
       height: 100%;
     }
 
-    .tile:nth-child(1) { background-position: top left; }
-    .tile:nth-child(2) { background-position: top center; }
-    .tile:nth-child(3) { background-position: top right; }
-    .tile:nth-child(4) { background-position: center left; }
-    .tile:nth-child(5) { background-position: center; }
-    .tile:nth-child(6) { background-position: center right; }
-    .tile:nth-child(7) { background-position: bottom left; }
-    .tile:nth-child(8) { background-position: bottom center; }
-    .tile:nth-child(9) { background-position: bottom right; }
+    /* Responsive tiles positions */
+    .tile:nth-child(1) { background-position: 0% 0%; }
+    .tile:nth-child(2) { background-position: 50% 0%; }
+    .tile:nth-child(3) { background-position: 100% 0%; }
+    .tile:nth-child(4) { background-position: 0% 50%; }
+    .tile:nth-child(5) { background-position: 50% 50%; }
+    .tile:nth-child(6) { background-position: 100% 50%; }
+    .tile:nth-child(7) { background-position: 0% 100%; }
+    .tile:nth-child(8) { background-position: 50% 100%; }
+    .tile:nth-child(9) { background-position: 100% 100%; }
 
     /* RESPONSIVE */
     @media (max-width: 900px) {
       .hero { flex-direction: column; text-align: center; }
-      .image-grid { margin: auto; }
+      .image-grid { margin: 2rem auto 0 auto; }
     }
 
     @media (max-width: 500px) {
       .hero-text h2 { font-size: 2rem; }
       .hero-text p.tagline { font-size: 1rem; }
+      .image-grid { width: 250px; height: 250px; }
     }
   </style>
 </head>
-<body>
 
+<body>
 <header>
   <h1>Phumza Sotyantya</h1>
   <div class="nav-toggle" id="nav-toggle">
@@ -139,6 +159,5 @@
     navToggle.classList.toggle('open');
   });
 </script>
-
 </body>
 </html>
