--- a/about.html
+++ b/about.html
@@ -6,61 +6,124 @@
   <title>About Me | Phumza Sotyantya</title>
   <link rel="stylesheet" href="styles.css">
   <style>
-    .hero-text h2 {
-      color: var(--primary-blue);
-      font-size: 2.2rem;
-      margin-bottom: 1rem;
+    /* HERO LAYOUT */
+    .hero {
+      padding: 6rem 2rem 4rem;
       text-align: center;
     }
 
-    .hero-text p.tagline {
-      font-size: 1.1rem;
+    .hero h2 {
+      color: var(--primary-blue);
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+
+    .hero p.tagline {
+      font-size: 1.2rem;
       color: var(--text-muted);
       max-width: 700px;
-      margin: 0.5rem auto 1rem auto;
-      text-align: center;
-      min-height: 2.5em; /* prevent layout shift */
+      margin: 0 auto 1.5rem auto;
+      line-height: 1.6;
     }
 
     blockquote {
       font-style: italic;
       color: var(--text-muted);
+      font-size: 1.1rem;
+      line-height: 1.6;
+      margin: 1.5rem auto;
       max-width: 700px;
-      margin: 1rem auto;
-      text-align: center;
-      line-height: 1.5;
-      font-size: 1rem;
+      border-left: 3px solid var(--primary-blue);
+      padding-left: 1rem;
+    }
+
+    /* CONTENT CARDS */
+    .content-section {
+      max-width: 900px;
+      margin: 2rem auto;
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
     }
 
     .content-section .card {
-      max-width: 800px;
-      margin: 1rem auto;
-      padding: 1.5rem;
-      border-radius: 12px;
       background: var(--card-bg);
+      padding: 1.8rem;
+      border-radius: 12px;
       box-shadow: 0 6px 12px var(--shadow);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .content-section .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 25px var(--hover-glow);
+    }
+
+    .content-section h3 {
+      color: var(--primary-blue);
+      margin-bottom: 1rem;
       text-align: center;
+    }
+
+    /* QUICK FACTS */
+    .what-i-do {
+      max-width: 700px;
+      margin: 2rem auto;
+    }
+
+    .what-i-do h3 {
+      text-align: center;
+      color: var(--primary-blue);
+      margin-bottom: 1rem;
     }
 
     .what-i-do ul {
       list-style: none;
-      max-width: 600px;
-      margin: 1rem auto;
       padding-left: 0;
-      line-height: 1.6;
+      line-height: 1.8;
     }
 
-    .what-i-do li { margin-bottom: 0.8rem; }
+    .what-i-do li {
+      background: var(--card-bg);
+      margin-bottom: 0.8rem;
+      padding: 0.8rem 1rem;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px var(--shadow);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .what-i-do li:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 20px var(--hover-glow);
+    }
+
+    /* CTA BUTTON */
+    .contact-cta {
+      text-align: center;
+      margin: 3rem 0;
+    }
+
+    .fade-in {
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeIn 1s ease-out forwards;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
 
     @media (max-width: 768px) {
-      .hero-text h2 { font-size: 2rem; }
-      .hero-text p.tagline { font-size: 1rem; }
-      .content-section .card { padding: 1rem; }
+      .hero h2 { font-size: 2rem; }
+      .hero p.tagline { font-size: 1rem; }
+      .content-section .card { padding: 1.2rem; }
+      .what-i-do li { padding: 0.6rem 0.8rem; }
     }
   </style>
 </head>
-<body>
 
+<body>
 <header>
   <h1>Phumza Sotyantya</h1>
   <div class="nav-toggle" id="nav-toggle">
@@ -77,24 +140,27 @@
 </header>
 
 <main>
+  <!-- HERO -->
   <section class="hero fade-in">
-    <div class="hero-text">
-      <h2>About Me</h2>
-      <p class="tagline" id="typing-text"></p>
-      <blockquote>
-        "I work well in team-oriented environments, enjoy assisting others, and am committed to continuous learning and structured problem-solving."
-      </blockquote>
-    </div>
+    <h2>About Me</h2>
+    <p class="tagline">
+      I’m a <strong>Systems Development Graduate</strong> with a passion for technology, problem-solving, and making digital solutions accessible and practical.
+    </p>
+    <blockquote>
+      "I work well in team-oriented environments, enjoy assisting others, and am committed to continuous learning and structured problem-solving."
+    </blockquote>
   </section>
 
+  <!-- CONTENT SECTION -->
   <section class="content-section fade-in">
     <div class="card">
       <p>
-        With experience in <strong>IT support, peer advising, and ICT support</strong>, I enjoy analyzing systems, documenting processes, and contributing improvements through research and collaboration.
+        With hands-on experience in <strong>IT support, peer advising, and ICT support</strong>, I analyze systems, document processes, and contribute improvements through research, collaboration, and innovation.
       </p>
     </div>
   </section>
 
+  <!-- QUICK FACTS -->
   <section class="what-i-do fade-in">
     <h3>Quick Facts</h3>
     <ul>
@@ -106,7 +172,8 @@
     </ul>
   </section>
 
-  <section class="contact-cta fade-in" style="text-align:center;">
+  <!-- CTA BUTTON -->
+  <section class="contact-cta fade-in">
     <a href="experience-cert.html" class="cv-button">View Experience & Certifications</a>
   </section>
 </main>
@@ -114,29 +181,12 @@
 <footer>© 2025 Phumza Sotyantya</footer>
 
 <script>
-  // Hamburger toggle
   const navToggle = document.getElementById('nav-toggle');
   const navLinks = document.getElementById('nav-links');
   navToggle.addEventListener('click', () => {
     navLinks.classList.toggle('show');
     navToggle.classList.toggle('open');
   });
-
-  // Typing effect with JS
-  const text = "I’m a Systems Development Graduate committed to problem-solving, innovation, and making technology accessible and practical.";
-  const typingElement = document.getElementById('typing-text');
-  let index = 0;
-
-  function typeWriter() {
-    if(index < text.length){
-      typingElement.innerHTML += text.charAt(index);
-      index++;
-      setTimeout(typeWriter, 40); // adjust speed (ms)
-    }
-  }
-
-  window.onload = typeWriter;
 </script>
-
 </body>
 </html>
