Update greeting from 'I’m' to 'I am'

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <main>
   <section class="hero fade-in">
     <div class="hero-text">
-      <h2>Hello, I’m Phumza</h2>
+      <h2>Hello, I am </h2>
       <p class="tagline">
         A <strong>Systems Development Graduate</strong> passionate about solving problems with technology and creating inclusive digital solutions.
       </p>
