Edit quote for improved clarity
Removed 'am' from the commitment statement for clarity.

--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
       I’m a <strong>Systems Development Graduate</strong> with a passion for technology, problem-solving, and making digital solutions accessible and practical.
     </p>
     <blockquote>
-      "I work well in team-oriented environments, enjoy assisting others, and am committed to continuous learning and structured problem-solving."
+      "I work well in team-oriented environments, enjoy assisting others, and committed to continuous learning and structured problem-solving."
     </blockquote>
   </section>
 
